[update]: update old code
