# server/api/query_stock.go
@@ -3,22 +3,16 @@ package api
 import (
     "net/http"
     "io/ioutil"
+    "strings"
+    "fmt"
+    "os"
+    "path"
     "github.com/gin-gonic/gin"
+    "github.com/gocarina/gocsv"
     "greetlist/stock-web/server/model"
     "greetlist/stock-web/server/conf"
     "greetlist/stock-web/server/util"
 )
-
-// GetDailyStockData godoc
-// @Summary Query Daily Stock Computed Data
-// @Description Return Strategy Daily Computed Data
-// @ID queryDailyStockData
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /api/stock/getDailyStockData [get]
-func GetDailyStockData(context *gin.Context) {
-}
 
 // GetQueryStockData godoc
 // @Summary Query Sepcific Stock Computed Data
@@ -31,7 +25,6 @@ func GetDailyStockData(context *gin.Context) {
 // @Router /api/stock/getQueryStockData [post]
 func GetQueryStockData(context *gin.Context) {
     request := model.GetQueryStockDataRequest{}
-    //request := make(map[string]interface{})
     if err := context.BindJSON(&request); err != nil {
 	    context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -40,12 +33,8 @@ func GetQueryStockData(context *gin.Context) {
     for _, stockCode := range(request.StockList) {
         var stockDataItem model.StockDataItem
         stockDataItem.StockCode = stockCode
-        stockFilePath := conf.StockResultBaseDir + stockCode + "/result_ma.csv"
-        csvReader := util.CsvReader{}
-        csvReader.ReadCsv(stockFilePath)
-        dataLen := len(csvReader.Data)
-        startIndex := dataLen - dataLen / 7
-        stockDataItem.Records = csvReader.Data[startIndex:]
+        stockFilePath := path.Join(conf.StockResultBaseDir, stockCode, "result_ma.csv")
+        stockDataItem.Records = extractSingleStockDataFromCsv(stockFilePath)
         response.StockDatas = append(response.StockDatas, stockDataItem)
     }
     context.JSON(http.StatusOK, response)
@@ -69,3 +58,69 @@ func GetAllStockCode(context *gin.Context) {
     response := model.GetAllStockCodeResponse{StockList: stockList}
     context.JSON(http.StatusOK, response)
 }
+
+// GetAllStockCode godoc
+// @Summary Query Daily Calc Stock Data
+// @Description Return All Daily Calc Stock Data
+// @ID getDailyCalcStockData
+// @Produce json
+// @Success 200 {object} model.GetDailyCalcStockDataResponse
+// @Router /api/stock/getDailyCalcStockData [get]
+func GetDailyCalcStockData(context *gin.Context) {
+    todayStr := strings.ReplaceAll(util.GetTodayStr(), "-", "/")
+    dailyFilePath := path.Join(conf.DailyResultBaseDir, todayStr, "/ma_statistic_result.csv")
+
+    type result struct {
+        StockCode string `csv:"StockCode"`
+        CheckFlag bool `csv:"CheckFlag"`
+    }
+    f, err := os.OpenFile(dailyFilePath, os.O_RDWR, os.ModePerm)
+    if err != nil {
+        fmt.Printf("Open File %s Error : %s.\n", dailyFilePath, err)
+    }
+    defer f.Close()
+    var resultList []*result
+    if err := gocsv.UnmarshalFile(f, &resultList); err != nil {
+        fmt.Printf("Unmarshal csv file error : %s.\n", err)
+	}
+    var dailyStockCodeList []string
+    for _, value := range(resultList) {
+        if (*value).CheckFlag {
+            dailyStockCodeList = append(dailyStockCodeList, (*value).StockCode)
+        }
+    }
+
+    var stockDatas []model.StockDataItem
+    for _, stockCode := range(dailyStockCodeList) {
+        var curItem model.StockDataItem
+        curItem.StockCode = stockCode
+        stockCsvFilePath := path.Join(conf.StockResultBaseDir, stockCode, "/result_ma.csv")
+        curItem.Records = extractSingleStockDataFromCsv(stockCsvFilePath)
+        stockDatas = append(stockDatas, curItem)
+    }
+
+    response := model.GetDailyCalcStockDataResponse{stockDatas}
+    context.JSON(http.StatusOK, response)
+}
+
+func extractSingleStockDataFromCsv(stockFilePath string) []model.SingleRecord {
+    var res []model.SingleRecord
+    f, err := os.OpenFile(stockFilePath, os.O_RDWR, os.ModePerm)
+    if err != nil {
+        fmt.Printf("Open File %s Error : %s.\n", stockFilePath, err)
+    }
+    defer f.Close()
+
+    var curStockRecords []*model.SingleRecord
+    if err := gocsv.UnmarshalFile(f, &curStockRecords); err != nil {
+        fmt.Printf("Unmarshal csv file error : %s.\n", err)
+    }
+    dataLen := len(curStockRecords)
+    startIndex := dataLen - dataLen / 7
+    curStockRecords = curStockRecords[startIndex:]
+    for _, value := range(curStockRecords) {
+        res = append(res, *value)
+    }
+    return res
+}
+
