# server/model/stock_related_struct.go
@@ -5,16 +5,16 @@ type GetQueryStockDataRequest struct {
 }
 
 type SingleRecord struct {
-    Date string `json:"date"`
-    Open float64 `json:"open"`
-    Close float64 `json:"close"`
-    High float64 `json:"high"`
-    Low float64 `json:"low"`
-    Volume float64 `json:"volume"`
-    Money float64 `json:"money"`
-    Ma13 float64 `json:"ma13"`
-    Ma34 float64 `json:"ma34"`
-    Ma55 float64 `json:"ma55"`
+    Date string `json:"date" csv:"date"`
+    Open float64 `json:"open" csv:"open"`
+    Close float64 `json:"close" csv:"close"`
+    High float64 `json:"high" csv:"high"`
+    Low float64 `json:"low" csv:"low"`
+    Volume float64 `json:"volume" csv:"volume"`
+    Money float64 `json:"money" csv:"money"`
+    Ma13 float64 `json:"ma13" csv:"MA13"`
+    Ma34 float64 `json:"ma34" csv:"MA34"`
+    Ma55 float64 `json:"ma55" csv:"MA55"`
 }
 
 type StockDataItem struct {
@@ -28,4 +28,8 @@ type GetQueryStockDataResponse struct {
 
 type GetAllStockCodeResponse struct {
     StockList []string `json:"stock_list" example:"['000001', '002142', ...]"`
+}
+
+type GetDailyCalcStockDataResponse struct {
+    StockDatas []StockDataItem `json:"stock_datas"`
 }
