# server/routers/stock_router.go
@@ -7,7 +7,7 @@ import (
 
 func InitStockApiRouter(RouterGroup *gin.RouterGroup) {
     StockRouterGroup := RouterGroup.Group("stock")
-    StockRouterGroup.GET("/getDailyStockData", api.GetDailyStockData)
+    StockRouterGroup.GET("/getDailyCalcStockData", api.GetDailyCalcStockData)
     StockRouterGroup.POST("/getQueryStockData", api.GetQueryStockData)
     StockRouterGroup.GET("/getAllStockCode", api.GetAllStockCode)
 }
